[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/scripts/OnlineSeminar01.gd" type="Script" id=1]
[ext_resource path="res://videos/walkinghz.webm" type="VideoStream" id=2]
[ext_resource path="res://videos/Breadcrumbs/OnlineSeminar.webm" type="VideoStream" id=3]
[ext_resource path="res://audios/Theme.ogg" type="AudioStream" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapOS" type="VideoPlayer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
audio_track = 1
stream = ExtResource( 3 )
volume_db = -20.0
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -30.0
[connection signal="finished" from="MapOS" to="." method="_on_MapOS_finished"]
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
